[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ocean_background.png" type="Texture" id=1]
[ext_resource path="res://UI/ReefScene.gd" type="Script" id=2]
[ext_resource path="res://assets/Reef.png" type="Texture" id=3]
[ext_resource path="res://assets/RightBush.png" type="Texture" id=4]
[ext_resource path="res://assets/LeftBush.png" type="Texture" id=5]
[ext_resource path="res://assets/Bubbles.png" type="Texture" id=6]
[ext_resource path="res://Pieces/Barrier.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/INTELLEC.TTF" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.513726, 0.160784, 0.160784, 1 )
use_mipmaps = true
font_data = ExtResource( 8 )

[node name="ReefScene" type="TextureRect" groups=[
"Fish",
"Sharks",
"Players",
]]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
script = ExtResource( 2 )

[node name="Reef" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 427.157
margin_right = 1.0
margin_bottom = 24.1573
texture = ExtResource( 3 )
expand = true

[node name="RightBush" type="Sprite" parent="Reef"]
position = Vector2( 686.821, 50.2826 )
texture = ExtResource( 4 )
hframes = 2

[node name="LeftBush" type="Sprite" parent="Reef"]
position = Vector2( 168.802, 64.5449 )
texture = ExtResource( 5 )
hframes = 2

[node name="Bubbles" type="Sprite" parent="Reef"]
position = Vector2( 519.789, 273.022 )
texture = ExtResource( 6 )
hframes = 5

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.9
autostart = true

[node name="BubblesTimer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="BubblesAnimation" type="Timer" parent="."]
wait_time = 0.2

[node name="TopBarrier" parent="." instance=ExtResource( 7 )]
position = Vector2( 512, -10 )
scale = Vector2( 51.2, 1 )
player_only_barrier = true
block_vertical = true

[node name="Floor" parent="." instance=ExtResource( 7 )]
position = Vector2( 512, 610 )
scale = Vector2( 200, 1 )
block_vertical = true

[node name="LeftBarrier" parent="." instance=ExtResource( 7 )]
position = Vector2( -10, 300 )
scale = Vector2( 1, 32 )
player_only_barrier = true
block_horizontal = true

[node name="RightBarrier" parent="." instance=ExtResource( 7 )]
position = Vector2( 1034, 300 )
scale = Vector2( 1, 32 )
player_only_barrier = true
block_horizontal = true

[node name="LivesLabel" type="Label" parent="."]
anchor_left = 0.098
anchor_right = 0.381
anchor_bottom = 0.067
margin_left = 59.648
margin_top = 10.0
margin_right = 56.856
margin_bottom = 0.799999
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 1, 0, 1 )
text = "Lives Label"

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.732
anchor_right = 0.977
anchor_bottom = 0.068
margin_left = 70.4319
margin_top = 10.0
margin_right = 106.552
margin_bottom = 0.199997
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "0"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 380.0
margin_top = 280.0
margin_right = -357.0
margin_bottom = -289.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="NewFishTimer" type="Timer" parent="."]

[node name="NewSharkTimer" type="Timer" parent="."]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="BubblesTimer" to="." method="_on_BubblesTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="BubblesAnimation" to="." method="_on_BubblesAnimation_timeout"]
[connection signal="timeout" from="NewFishTimer" to="." method="_on_NewFishTimer_timeout"]
[connection signal="timeout" from="NewSharkTimer" to="." method="_on_NewSharkTimer_timeout"]
